--- a/src/android/res/layout/activity_call_screen.xml
+++ b/src/android/res/layout/activity_call_screen.xml
@@ -1,108 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    tools:context="com.example.prexition.myapplication.CallScreenActivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:id="@+id/constraint_layout"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:background="@color/colorPrimaryDark"
+                                             tools:context="com.example.prexition.myapplication.CallScreenActivity">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#001970"
-        android:orientation="vertical"
-        android:weightSum="5"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="98dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#001970"
+                    android:orientation="vertical"
+                    android:weightSum="5"
+                    tools:layout_editor_absoluteX="76dp"
+                    tools:layout_editor_absoluteY="98dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:layout_weight="1"
-            android:elevation="0dp"
-            android:gravity="top|bottom|left|right|center_horizontal"
-            android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp"
+                android:layout_weight="1"
+                android:elevation="0dp"
+                android:gravity="top|bottom|left|right|center_horizontal"
+                android:orientation="vertical">
 
             <TextView
-                android:id="@+id/status"
-                android:layout_width="203dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="20dp"
-                android:gravity="center_horizontal"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="#fff" />
+                    android:id="@+id/status"
+                    android:layout_width="203dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="20dp"
+                    android:gravity="center_horizontal"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="#fff" />
 
             <TextView
-                android:id="@+id/username"
-                android:layout_width="277dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="10dp"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                    android:id="@+id/username"
+                    android:layout_width="277dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="10dp"
+                    android:textAlignment="center"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/address"
-                android:layout_width="213dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="20dp"
-                android:textAlignment="center"
-                android:textColor="#fff" />
+                    android:id="@+id/address"
+                    android:layout_width="213dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="20dp"
+                    android:textAlignment="center"
+                    android:textColor="#fff" />
 
             <TextView
-                android:id="@+id/duration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="10dp"
-                android:elevation="7dp"
-                android:fontFamily="monospace"
-                android:hint="Call length"
-                android:text="--:--"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:textSize="45sp"
-                android:textStyle="bold"
-                android:typeface="normal" />
+                    android:id="@+id/duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="10dp"
+                    android:elevation="7dp"
+                    android:fontFamily="monospace"
+                    android:hint="Call length"
+                    android:text="--:--"
+                    android:textAlignment="center"
+                    android:textColor="#ffffff"
+                    android:textSize="45sp"
+                    android:textStyle="bold"
+                    android:typeface="normal" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="130dp"
-                    android:layout_height="64dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
+                <LinearLayout
+                        android:layout_width="130dp"
+                        android:layout_height="64dp"
+                        android:orientation="horizontal">
+
                     <Button
-                        android:id="@+id/loudspeaker"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentBottom="true"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="0dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/roundcorner_black"
-                        android:drawableLeft="@mipmap/loudspeaker"
-                        android:elevation="9dp"
-                        android:onClick="toggleSpeaker"
-                        android:paddingLeft="0dp"
-                        android:paddingRight="0dp"
-                        android:text="Speaker Off"
-                        android:textAllCaps="false"
-                        android:textColor="#fff" />
+                            android:id="@+id/loudspeaker"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginBottom="0dp"
+                            android:layout_marginLeft="0dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/roundcorner_black"
+                            android:drawableLeft="@mipmap/loudspeaker"
+                            android:elevation="9dp"
+                            android:onClick="toggleSpeaker"
+                            android:paddingLeft="0dp"
+                            android:paddingRight="0dp"
+                            android:text="Speaker Off"
+                            android:textAllCaps="false"
+                            android:textColor="#fff" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -110,20 +110,43 @@
         </LinearLayout>
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="37dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@drawable/roundcorner"
-            android:elevation="0dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:onClick="hangUp"
-            android:text="Hang up call"
-            android:textAlignment="center"
-            android:textColor="#fff" />
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="bottom|center_horizontal"
+                android:orientation="vertical">
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="30dp"
+                    android:orientation="horizontal">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:orientation="horizontal">
+
+                    <Button
+                            android:id="@+id/hangup"
+                            android:layout_width="72dp"
+                            android:layout_height="72dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_weight="1"
+                            android:background="@drawable/roundcorner"
+                            android:drawableLeft="@mipmap/hangup"
+                            android:elevation="0dp"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:onClick="hangUp"
+                            android:paddingLeft="12dp"
+                            android:textAlignment="center"
+                            android:textColor="#fff" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
